--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,60 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.speech-bubble-about,
+.speech-bubble-work,
+.speech-bubble-blog {
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
+.speech-bubble-about:hover,
+.speech-bubble-work:hover,
+.speech-bubble-blog:hover {
+    animation-play-state: paused;
+}
+
+.speech-bubble-about {
+    animation-delay: -2s;
+}
+
+.speech-bubble-work {
+    animation-delay: -1s;
+}
+
+.speech-bubble-about {
+    animation-delay: -3s;
+}
+
+.speech-bubble-about::after,
+.speech-bubble-work::after,
+.speech-bubble-blog::after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 0;
+    border-left: 12px solid transparent;
+    border-right: 12px solid transparent;
+    border-top: 25px solid white;
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.floating {
+    animation-name: floating;
+    animation-delay: -2s, -1s, -3s;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+}
+
+@keyframes floating {
+    0% { transform: translate(0, 0px); }
+    50% { transform: translate(0, 15px); }
+    100% { transform: translate(0, -0px); }
+}
