--- a/web/assets/index.css
+++ b/web/assets/index.css
@@ -513,8 +513,58 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
+.fixed {
+  position: fixed;
+}
+
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
+}
+
+.right-2 {
+  right: 0.5rem;
+}
+
+.bottom-6 {
+  bottom: 1.5rem;
 }
 
 .z-10 {
@@ -538,20 +588,32 @@ video {
   display: flex;
 }
 
-.h-screen {
-  height: 100vh;
+.hidden {
+  display: none;
+}
+
+.h-auto {
+  height: auto;
 }
 
 .h-24 {
   height: 6rem;
 }
 
+.h-\[48px\] {
+  height: 48px;
+}
+
 .h-full {
   height: 100%;
 }
 
-.min-h-\[45vh\] {
-  min-height: 45vh;
+.min-h-\[272px\] {
+  min-height: 272px;
+}
+
+.min-h-\[35vh\] {
+  min-height: 35vh;
 }
 
 .w-full {
@@ -562,12 +624,20 @@ video {
   width: 9rem;
 }
 
+.w-\[72px\] {
+  width: 72px;
+}
+
 .max-w-\[323px\] {
   max-width: 323px;
 }
 
 .transform {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.resize {
+  resize: both;
 }
 
 .flex-col {
@@ -588,6 +658,10 @@ video {
 
 .gap-y-20 {
   row-gap: 5rem;
+}
+
+.gap-y-5 {
+  row-gap: 1.25rem;
 }
 
 .rounded-full {
@@ -670,6 +744,16 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
+.shadow-lg {
+  --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow {
   --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
@@ -682,36 +766,43 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.speech-bubble-about,
-.speech-bubble-work,
-.speech-bubble-blog {
+body main {
+  margin: 0px 0px;
+  overflow: auto;
+}
+
+.DesktopNav .speech-bubble-about,
+.DesktopNav .speech-bubble-work,
+.DesktopNav .speech-bubble-blog {
   animation-name: floating;
   animation-duration: 3s;
   animation-iteration-count: infinite;
   animation-timing-function: ease-in-out;
+  transition-property: all;
+  transition-duration: 250ms;
 }
 
-.speech-bubble-about:hover,
-.speech-bubble-work:hover,
-.speech-bubble-blog:hover {
+.DesktopNav .speech-bubble-about:hover,
+.DesktopNav .speech-bubble-work:hover,
+.DesktopNav .speech-bubble-blog:hover {
   animation-play-state: paused;
 }
 
-.speech-bubble-about {
+.DesktopNav .speech-bubble-about {
   animation-delay: -2s;
 }
 
-.speech-bubble-work {
+.DesktopNav .speech-bubble-work {
   animation-delay: -1s;
 }
 
-.speech-bubble-about {
+.DesktopNav .speech-bubble-about {
   animation-delay: -3s;
 }
 
-.speech-bubble-about::after,
-.speech-bubble-work::after,
-.speech-bubble-blog::after {
+.DesktopNav .speech-bubble-about::after,
+.DesktopNav .speech-bubble-work::after,
+.DesktopNav .speech-bubble-blog::after {
   content: '';
   display: block;
   width: 0;
@@ -725,12 +816,17 @@ video {
   transform: translateX(-50%);
 }
 
-.floating {
-  animation-name: floating;
-  animation-delay: -2s, -1s, -3s;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
+.fadeOut {
+  visibility: none;
+  opacity: 0;
+  transition: opacity 250ms;
+  pointer-events: none;
+}
+
+.fadeIn {
+  opacity: 1;
+  transition: opacity 250ms;
+  pointer-events: none;
 }
 
 @keyframes floating {
