--- a/web/assets/index.css
+++ b/web/assets/index.css
@@ -551,10 +551,6 @@ video {
   position: fixed;
 }
 
-.absolute {
-  position: absolute;
-}
-
 .relative {
   position: relative;
 }
@@ -606,10 +602,6 @@ video {
 
 .h-full {
   height: 100%;
-}
-
-.min-h-\[272px\] {
-  min-height: 272px;
 }
 
 .min-h-\[35vh\] {
@@ -771,35 +763,6 @@ body main {
   overflow: auto;
 }
 
-.DesktopNav .speech-bubble-about,
-.DesktopNav .speech-bubble-work,
-.DesktopNav .speech-bubble-blog {
-  animation-name: floating;
-  animation-duration: 3s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-  transition-property: all;
-  transition-duration: 250ms;
-}
-
-.DesktopNav .speech-bubble-about:hover,
-.DesktopNav .speech-bubble-work:hover,
-.DesktopNav .speech-bubble-blog:hover {
-  animation-play-state: paused;
-}
-
-.DesktopNav .speech-bubble-about {
-  animation-delay: -2s;
-}
-
-.DesktopNav .speech-bubble-work {
-  animation-delay: -1s;
-}
-
-.DesktopNav .speech-bubble-about {
-  animation-delay: -3s;
-}
-
 .DesktopNav .speech-bubble-about::after,
 .DesktopNav .speech-bubble-work::after,
 .DesktopNav .speech-bubble-blog::after {
@@ -840,6 +803,37 @@ body main {
 
   100% {
     transform: translate(0, -0px);
+  }
+}
+
+@media (min-width: 1024px) {
+  .DesktopNav .speech-bubble-about,
+    .DesktopNav .speech-bubble-work,
+    .DesktopNav .speech-bubble-blog {
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    transition-property: all;
+    transition-duration: 250ms;
+  }
+
+  .DesktopNav .speech-bubble-about:hover,
+    .DesktopNav .speech-bubble-work:hover,
+    .DesktopNav .speech-bubble-blog:hover {
+    animation-play-state: paused;
+  }
+
+  .DesktopNav .speech-bubble-about {
+    animation-delay: -2s;
+  }
+
+  .DesktopNav .speech-bubble-work {
+    animation-delay: -1s;
+  }
+
+  .DesktopNav .speech-bubble-about {
+    animation-delay: -3s;
   }
 }
 
