--- a/templates/index.twig
+++ b/templates/index.twig
@@ -91,6 +91,12 @@
                         <span class='bg-white text-black text-[35px] mb-10'>Trevor Jarrett</span>
                     </h1>
                 </div>
+
+                <div class='AboutTJ text-white'>
+                    <p>I'm a front-end focused fullstack developer/engineer located in Indianapolis.</p>
+                    <p>I believe in an open and accessible web; performance, accessibility and user-experience are key.</p>
+                    <p>During non-work hours you can find me painting miniature models, playing board games, learning about 3D printing and working on my home automation setup.</p>
+                </div>
             </section>
 
             <div class='bg-black'>
